--- a/manuscript/SI.qmd
+++ b/manuscript/SI.qmd
@@ -10,7 +10,6 @@ editor:
     wrap: sentence
 ---
 
-
 ```{r}
 #| label: set-up
 #| echo: false
@@ -26,10 +25,9 @@ library(patchwork)
 library(ggpubr)
 ```
 
-
 ## Methods
 
-### Supplementary Figure 1: Temperature effects on the microclimate 
+### Supplementary Figure 1: Temperature effects on the microclimate
 
 ```{r}
 #| label: fig-daily-climate
@@ -40,7 +38,6 @@ tar_load(daily_climate_figure)
 daily_climate_figure
 
 ```
-
 
 ### Supplementary Figure 2: Plant productivity and consumption
 
@@ -54,7 +51,6 @@ tar_load(productivity_consumption_figure)
 productivity_consumption_figure
 
 ```
-
 
 ### Supplementary Table 1: Temperature effects on the microclimate
 
@@ -79,7 +75,6 @@ tar_load(climate_figure)
 climate_figure
 ```
 
-
 ### Supplementary Table 2: Climate and global change drivers
 
 ```{r}
@@ -90,7 +85,6 @@ tar_load(climate_stats)
 climate_stats
 
 ```
-
 
 ### Supplementary Figure 4: Calculating standing biomass
 
@@ -105,8 +99,8 @@ tar_read(standing_biomass_back_fig, store = here::here(tar_config_get("store")))
 
 ```
 
+### Supplementary Table 3: Model output for estimated standing biomass
 
-### Supplementary Table 3: Model output for estimated standing biomass 
 ```{r}
 #| label: tbl-standing-biomass-model-output
 #| echo: false
@@ -134,6 +128,21 @@ tidy(standing_biomass_model) |>
 
 ```
 
+### Supplementary Figure 5: Global change affects richness and evenness
+
+```{r}
+#| label: fig-div-index
+#| echo: false
+#| warning: false
+#| fig-width: 8
+#| fig-height: 13
+#| fig-cap: Species richness across (a), and separate by site (b), evenness across (c), and separately by site (d) with increasing nitrogen addition (kg N ha^-1^ y^-1^) in the alpine (upper row) and sub-alpine (lower row) sites. The x axis is log transformed, the numbers are on the original scale for ease of interpretation. The colors indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (circle = control, square = medium, triangle = intensive grazing). The points show the raw data, while the lines indicate model predictions with confidence intervals. The capital letters within panels indicate significant (black) model terms (W = warming, N = nitrogen addition, C = cutting, S = site, combined letters, e.g. WxC = interactions). Letters in grey indicate almost significant model terms.
+
+tar_read(div_index_figure, store = here::here(tar_config_get("store")))
+
+```
+
+### 
 
 ### Structural equation model
 
@@ -247,7 +256,6 @@ graz_final_evenness[[1]]
 
 ```
 
-
 **Cutting - change in diversity/richness/evenness and biomass (log ratio)**
 
 ```{r}
@@ -290,7 +298,6 @@ cut_change_evenness[[1]]
 
 ```
 
-
 **Grazing - change in diversity/richness/evenness and biomass (log ratio)**
 
 ```{r}
@@ -304,7 +311,6 @@ cut_change_evenness[[1]]
 tar_read(graz_change_figure, store = here::here(tar_config_get("store")))
 
 ```
-
 
 ```{r}
 #| label: fig-graz-change-richness
@@ -349,7 +355,6 @@ tar_read(traits_figure, store = here::here(tar_config_get("store")))
 
 ```
 
-
 ### Biomass diversity relationship
 
 ```{r}
@@ -362,7 +367,6 @@ tar_read(traits_figure, store = here::here(tar_config_get("store")))
 tar_read(standingB_div_change_figure, store = here::here(tar_config_get("store")))
 
 ```
-
 
 ```{r}
 #| label: tbl-bio-div2
