comment out link

--- a/manuscript/introduction.qmd
+++ b/manuscript/introduction.qmd
@@ -35,7 +35,7 @@ library(tarchetypes)
 
 *\[Mechanism grazing\]* In contrast to warming and nutrient addition, grazing animals affect plant communities primarily through removing biomass and acting as disturbance agents through grazing and trampling, although we note that their effects on productivity are complex as they also add nutrients addition from urine and dung (@fig-concept a). Importantly, the effect of changes in biomass removal and disturbance on biodiversity should vary across environmental contexts, depending on the dominant biotic interactions within communities. Specifically, when environmental conditions are harsh, productivity low, and where facilitative interactions dominate, increased grazing is expected to lead to loss of facilitative interactions and may thus negatively impact diversity (white area in @fig-concept b). In contrast, in more productive systems, increased removal of biomass by grazers can lead to release from competitive interactions and hence increased diversity [@Austrheim2001-nu; @niedrist2009plant; @Bernes2015-yg; @frank2005interactive; @kaarlejarvi2017herbivores] (grey area in @fig-concept b). The magnitude of these effects of grazing on biodiversity thus depend both on the direction and intensity of plant-plant interactions within the vegetation (i.e., on productivity and/or environmental harshness, the x-axis in @fig-concept b) and on the intensity of grazing (i.e., the amount of biomass removed; dashed and dotted lines and arrows in @fig-concept b)[@cingolani2005grazing; @milchunas1988generalized; @milchunas1993quantitative].
 
-grazing effect on diversity: <https://link.springer.com/article/10.1007/s00442-005-0019-2>
+<!--# grazing effect on diversity: https://link.springer.com/article/10.1007/s00442-005-0019-2 -->
 
 \[*Proposed working hypothesis*\] Based on these observations, our working hypothesis is that the effects of warming and nitrogen addition and grazing on alpine plant diversity operate through the same underlying mechanisms (@fig-concept a), namely the role of plant productivity and standing biomass in controlling the direction and intensity of plant-plant interactions (H1). Specifically, a warmer climate and/or nitrogen addition should generally push plant communities towards increased standing biomass and hence increasingly competitive plant-plant interactions (i.e. pink and brown arrows in @fig-concept b). In contrast, the effect of grazing on biodiversity should depend on the system's position along the productivity gradient, and be negative under low productivity when facilitative interactions prevail and positive under high productivity when competitive interactions prevail (negative on the left-hand side, positive on the right-hand side, @fig-concept b; H2). If these expectations are confirmed, grazing, which can be managed locally and at short time scales, provides an opportunity to empirically and experimentally test conditions under which grazing positively influences plant diversity, which again could guide management solutions for alpine grasslands exposed to climate warming and atmospheric nitrogen deposition.
 
