generalize for all indices

--- a/manuscript/methods.qmd
+++ b/manuscript/methods.qmd
@@ -91,9 +91,9 @@ Standing biomass was estimated in all plots pre-treatment (2019) and after 3 yea
 
 To test if warming, nitrogen addition and clipping affect standing biomass after three years of treatment in 2022, we used a fixed effects linear model with a normal error distribution. The model contained standing biomass as response and origin site of the plant community and a three-way interaction of warming, nitrogen addition and clipping as predictors. The experimental design did not allow running a mixed-effects model, because there is no replication at the plot level. Clipping was transformed to a numerical scale with 0 (control), 2 (intermediate) or 4 (intensive) cuts per growing season. The nitrogen levels we chose ranged from low to very high levels and they were unevenly distributed on a linear scale. We did not expect linear responses along this nitrogen gradient and therefore used three models that differed in the nitrogen addition treatment term, reflecting separate assumptions for the response to nitrogen addition: a) a linear term as a null model (N), b) a logarithmic term (log(N)) to account for the uneven distribution of the nitrogen levels, and c) a quadratic term (N^2^) allowing for a concave/convex relationship. To find the most parsimonious model, we compared the AIC values of all three models and chose the one with the lowest AIC values. If the models differed in 𝚫AIC ≤ 2, we chose the simplest model. We preferred the logarithmic before the linear model, because it reflects a more realistic assumption than the null model. The most parsimonious model for standing biomass was the logarithmic model.
 
-<!--# Do we want to run all analysis for grazing as well? And should I put the richness and evenness in the appendix? -->
+<!--# Do we want to run all analysis for grazing as well? -->
 
-To test if warming, nitrogen addition and clipping affect plant diversity at the end of the experiment (2022), we calculated the following diversity indices: species richness (n; number of species), Shannon diversity $H' = -\Sigma_{i} p_{i} * ln(p_{i})$, where $p_{i}$ is the proportional abundance of species i) and species evenness $\frac{H'}{log(n)}$ using the vegan package [@oksanen2022vegan]. The most parsimonious model for diversity was the linear model.
+To test if warming, nitrogen addition and clipping affect plant diversity at the end of the experiment (2022), we calculated the following diversity indices: species richness (n; number of species), Shannon diversity $H' = -\Sigma_{i} p_{i} * ln(p_{i})$, where $p_{i}$ is the proportional abundance of species i) and species evenness $\frac{H'}{log(n)}$ using the vegan package [@oksanen2022vegan]. The most parsimonious model for all three diversity indices was the linear model.
 
 <!--# How to explain this? -->
 
